quick footer gap fix

--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -46,7 +46,6 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
   text-align: center;
-  padding: 15px 0;
 }
 
 /*Wrapper is added for footer adjustment purposes*/
